# wgpu-font-renderer

./: Cargo.toml  README.md
examples/: simple.rs
src/: atlas.rs  font_loader.rs  lib.rs  loader.rs  ortho.rs  renderer.rs  shader.wgsl  store.rs  typewriter.rs
src/atlas/: allocation.rs  allocator.rs  layer.rs
